# dwg_analysis_v3

./: .gitignore  README.md  pyproject.toml
analysis/: template_notebook.ipynb  template_notebook_old.ipynb  template_processor.py  template_processor_old.py
analysis/2023_ttbar_dwg_ntuple/: upload_log.txt
analysis_tools/: paths.py
analysis_tools/cuts/: KU_ntupilizer.py  __init__.py  event_skim.py  lep_cuts.py  lep_skim.py  lep_tagger.py  lep_variables.txt  skim_variables.json
analysis_tools/efficiencies/: lpte_efficiency.py
analysis_tools/ntupilizer/: skim.py
analysis_tools/ntupilizer/funcs/: __init__.py  gen_filter.py  gen_tagger.py  lep_cuts.py  lep_tagger.py
analysis_tools/plotting/: make_plots.py
config/: skim_variables.json
dataset_tools/preprocessing/: SlepSnu_270.json  datasets.json  preprocessing_all.ipynb
dwg_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: template_notebook.ipynb  template_processor.py
notebooks/testing/: template_notebook.ipynb  template_processor.py
notes/: Condor_help.ipynb  DataSet_Discovery_notes.ipynb  Eyebert_notes.ipynb  MC_samples.ipynb  commands.ipynb  github_notes.md  notes_and_solved_bugs.ipynb  root_commands.ipynb  test_ddc.ipynb
skimming/: lepton_cuts.py
skimming/NanoAOD_v12/: dwg_ntupilizer_v12.py  lep_variables.json  run_dwg_ntupilizer_v12.ipynb
skimming/NanoAOD_v12/general_NAOD_skim/: run_skimmer_v12.ipynb  skimmer_nanoAOD_v12.py
tools/analysis_tools/efficiencies/: ele_efficiency.py  muon_efficiency.py
tools/analysis_tools/plotting/: make_hist.py
(+3 files in other folders)
